libs/modkit-db-macros/tests/ui/err_pep_reserved_owner_id.stderr
error: pep_prop: 'owner_id' is a reserved property name; use `owner_col` instead
  --> tests/ui/err_pep_reserved_owner_id.rs:11:14
   |
11 |     pep_prop(owner_id = "owner_id"),
   |              ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/err_pep_reserved_owner_id.rs:13:14
   |
13 | struct Model;
   |              ^ consider adding a `main` function to `$DIR/tests/ui/err_pep_reserved_owner_id.rs`
